gamedata_files = [ 'configuration.xml',
                   'configuration.xsd',
                   'items.xml',
                   'items.xsd',
                   'sounds.xml',
                   'sounds.xsd',
                   'hoh-icon.png' ]

install_data( gamedata_files,
              install_dir: 'share/headoverheels')
              
subdir('text')
subdir('sound')
subdir('savegame')
subdir('music')
subdir('map')
subdir('gfx/blacktooth')
subdir('gfx/byblos')
subdir('gfx/egyptus')
subdir('gfx/moonbase')
subdir('gfx/penitentiary')
subdir('gfx/safari')
subdir('gfx/gui')
subdir('gfx/item')
subdir('gfx/jail')
subdir('gfx/market')

